--- a/07-31-18-Perceptron/perceptron.ipynb
+++ b/07-31-18-Perceptron/perceptron.ipynb
@@ -9,22 +9,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 0]: -0.09033867339739271 -> 0\n",
-      "[0 1]: 0.22365357279399828 -> 1\n",
-      "[1 0]: 0.5507015203504058 -> 1\n",
-      "[1 1]: 0.8646937665417969 -> 1\n"
+      "[0 0]: -0.10649598705104069 -> 0\n",
+      "[0 1]: 0.35754105376021517 -> 1\n",
+      "[1 0]: 0.17613053719278787 -> 1\n",
+      "[1 1]: 0.6401675780040437 -> 1\n"
      ]
     }
    ],
    "source": [
     "from numpy import array, dot, random\n",
+    "from random import choice\n",
     "\n",
     "activation = lambda x: 0 if x < 0 else 1\n",
     "\n",
@@ -57,15 +58,8 @@
     "\n",
     "for x, _ in training_data:\n",
     "    result = dot(x, w)\n",
-    "    print(\"{}: {} -> {}\".format(x[:2], result, unit_step(result)))"
+    "    print(\"{}: {} -> {}\".format(x[:2], result, activation(result)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
